# Keyfile

./: .gitignore  README.md  keyfile.go
cpp/: CMakeLists.txt  Makefile  Makefile.old
cpp/include/: cli.h  key.h  keyfile.h
cpp/src/: CMakeLists.txt  binary.cpp  key.cmake  key.cpp  keyfile.cpp  options.cpp  test.cpp
cpp/src/key/: key.cmake  key.cpp  key.h
cpp/src/keygen/: CMakeLists.txt  cli.h  keygen.cmake  keygen.cpp  options.cpp  options.h
keyfile/: keyfile.go
src/: go.mod  keyfile.go
